--- a/index.2.html
+++ b/index.2.html
@@ -105,8 +105,13 @@
     const animeData = {
       "wind-breaker season 1": {
         title: "WIND BREAKER Season 1 in Hindi",
-        cover: "InShot_20250427_105208488.jpg",
+        cover: "photo/download (5).jpg",
         link: "anime/windbreakerseason1.html"
+      }
+      "Zom 100: Bucket List of the Dead": {
+        title: "Zom 100: Bucket List of the Dead",
+        cover: "photo/unnamed (2).jpg",
+        link: "anime/bucket.html"
       }
     };function loadCarousel() {
   const carousel = document.getElementById('carousel');
