--- a/index.2.html
+++ b/index.2.html
@@ -113,6 +113,12 @@
         cover: "photo/unnamed (2).jpg",
         link: "anime/bucket.html"
       }
+     {
+      "hunter x hunter": {
+        title: "hunter x hunter",
+        cover: "photo/download (6).jpg",
+        link: "anime/HUNTER×HUNTER.html"
+      }
     };function loadCarousel() {
   const carousel = document.getElementById('carousel');
   carousel.innerHTML = '';
