--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <div class="flex justify-center gap-6">
       <a href="copyright.html" class="button">Copyright Info</a>
-      <a href="contact.html" class="button">Contact Us</a>
+      <a href="support.html" class="button">support us</a>
     </div>
   </div>
 
