--- a/index.2.html
+++ b/index.2.html
@@ -115,7 +115,7 @@
   },
   "hunter x hunter": {
     title: "hunter x hunter",
-    cover: "photo/download (6).jpg",
+    cover: "photo/hunter-x-hunter-6l28uunxtr53l0un.jpg",
     link: "anime/HUNTER×HUNTER.html"
   }
 };
