--- a/index.2.html
+++ b/index.2.html
@@ -105,7 +105,7 @@
     const animeData = {
   "wind-breaker season 1": {
     title: "WIND BREAKER Season 1 in Hindi",
-    cover: "photo/download (5).jpg",
+    cover: "photo/18815.jpg",
     link: "anime/windbreakerseason1.html"
   },
   "Zom 100: Bucket List of the Dead": {
