--- a/anime/HUNTER×HUNTER.html
+++ b/anime/HUNTER×HUNTER.html
@@ -191,7 +191,105 @@
   { title: "Episode 47", link: "sVHotQrIfy8" },
   { title: "Episode 48", link: "42cmtcdeskI" },
   { title: "Episode 49", link: "oo3Cv_lRgXM" },
-  { title: "Episode 50", link: "gpWzfy2d71U" }
+  { title: "Episode 50", link: "gpWzfy2d71U" },
+  { title: "Episode 51", link: "sM2WsfU1Gsg" },
+  { title: "Episode 52", link: "nvqU5pjsUfs" },
+  { title: "Episode 53", link: "0l2gtajbRG8" },
+  { title: "Episode 54", link: "Hg8t3zvIq1Q" },
+  { title: "Episode 55", link: "P8Vcn3fk6yQ" },
+  { title: "Episode 56", link: "pZaPdss_yMY" },
+  { title: "Episode 57", link: "m4F6Oopoqz8" },
+  { title: "Episode 58", link: "Y-9TkrcP33M" },
+  { title: "Episode 59", link: "z2xOdGncRwI" },
+  { title: "Episode 60", link: "k4AdAufM87o" },
+  { title: "Episode 61", link: "pGDhr5TEoFg" },
+  { title: "Episode 62", link: "qe5kp7vk3As" },
+  { title: "Episode 63", link: "rKTFlz-v_4g" },
+  { title: "Episode 64", link: "bqFutpKLze4" },
+  { title: "Episode 65", link: "47tiRP_LI90" },
+  { title: "Episode 66", link: "UOMTA9fdX6k" },
+  { title: "Episode 67", link: "MhpxX1QQsBg" },
+  { title: "Episode 68", link: "EHAJcQGxl1Q" },
+  { title: "Episode 69", link: "S7Md2oN3L9c" },
+  { title: "Episode 70", link: "C1dIp-1igPc" },
+  { title: "Episode 71", link: "xExWTqExkBE" },
+  { title: "Episode 72", link: "zMgnMmNWWW4" },
+  { title: "Episode 73", link: "GjYO1-HZrpw" },
+  { title: "Episode 74", link: "nMzzxv9irbw" },
+  { title: "Episode 75", link: "1uwCvnStHUU" },
+  { title: "Episode 76", link: "CPtL9TzjA9U" },
+  { title: "Episode 77", link: "vvNpR9UBvas" },
+  { title: "Episode 78", link: "9ZoPCb62rlk" },
+  { title: "Episode 79", link: "zZX5RFaDP7o" },
+  { title: "Episode 80", link: "RcY7bFdqSIQ" },
+  { title: "Episode 81", link: "MpvlqOx5jSU" },
+  { title: "Episode 82", link: "z2upriaASec" },
+  { title: "Episode 83", link: "xJ3Wf4c1cHo" },
+  { title: "Episode 84", link: "ht9l7DCwObc" },
+  { title: "Episode 85", link: "SZjOcpWnFJs" },
+  { title: "Episode 86", link: "kQXa5RK0WHY" },
+  { title: "Episode 87", link: "ni9-y6ayuTc" },
+  { title: "Episode 88", link: "aGGsNw7PGzM" },
+  { title: "Episode 89", link: "wiTcyUSYDw8" },
+  { title: "Episode 90", link: "8ahR95BMcyo" },
+  { title: "Episode 91", link: "KeWNth6jqQQ" },
+  { title: "Episode 92", link: "Oqe5Xg027Ho" },
+  { title: "Episode 93", link: "ic30JjRPKN4" },
+  { title: "Episode 94", link: "glcICIPUS_A" },
+  { title: "Episode 95", link: "ZNLdBPDILS4" },
+  { title: "Episode 96", link: "TxX6S-OK-_I" },
+  { title: "Episode 97", link: "DfjoM6IvFU0" },
+  { title: "Episode 98", link: "oe9u_unvSFs" },
+  { title: "Episode 99", link: "LjLzPBC8nuE" },
+  { title: "Episode 100", link: "4KWtz3dzS9I" },
+  { title: "Episode 101", link: "xmLa3Qh6gxQ" },
+  { title: "Episode 102", link: "3gzcuJ4i6MI" },
+  { title: "Episode 103", link: "B80BZRAi4-w" },
+  { title: "Episode 104", link: "nJIIfo11Tic" },
+  { title: "Episode 105", link: "KUX8txFfcEc" },
+  { title: "Episode 106", link: "gs5ItpNvavQ" },
+  { title: "Episode 107", link: "FvaglX4V2w4" },
+  { title: "Episode 108", link: "I993pyK0t9g" },
+  { title: "Episode 109", link: "wuWgMS0EMwY" },
+  { title: "Episode 110", link: "i_RGhfe4OF4" },
+  { title: "Episode 111", link: "y8Qv6T1VBCg" },
+  { title: "Episode 112", link: "_PMFp4NRli4" },
+  { title: "Episode 113", link: "ndh65bJMAng" },
+  { title: "Episode 114", link: "9q-HPg5EWks" },
+  { title: "Episode 115", link: "NZTvKS6RgVg" },
+  { title: "Episode 116", link: "9YazKq03nZo" },
+  { title: "Episode 117", link: "Rhxi2ocBfW0" },
+  { title: "Episode 118", link: "AtjT3n2qxWg" },
+  { title: "Episode 119", link: "xZwL2oBUBHs" },
+  { title: "Episode 120", link: "TmFxVah5yWU" },
+  { title: "Episode 121", link: "tOIFiwacdJ0" },
+  { title: "Episode 122", link: "qGOsnOKUYNY" },
+  { title: "Episode 123", link: "dyJMNkX0iDc" },
+  { title: "Episode 124", link: "xZ6-d_QwcCQ" },
+  { title: "Episode 125", link: "TUixdgdil_g" },
+  { title: "Episode 126", link: "KsVkhW1L25c" },
+  { title: "Episode 127", link: "9nUaOLw42Ek" },
+  { title: "Episode 128", link: "YMR98HdZinw" },
+  { title: "Episode 129", link: "E2JK08Hhb34" },
+  { title: "Episode 130", link: "TTTs4zMatpM" },
+  { title: "Episode 131", link: "yNppFVuHc-A" },
+  { title: "Episode 132", link: "Df_jC2z0bmo" },
+  { title: "Episode 133", link: "m4UjmhQqbWY" },
+  { title: "Episode 134", link: "Oyt9R7_t3Xo" },
+  { title: "Episode 135", link: "nxs0SRnswlQ" },
+  { title: "Episode 136", link: "azIWSWUyvac" },
+  { title: "Episode 137", link: "G93rAetVcL8" },
+  { title: "Episode 138", link: "EPwscAo0s1E" },
+  { title: "Episode 139", link: "uuDGMTimz1M" },
+  { title: "Episode 140", link: "z9oLS3ZuF8Q" },
+  { title: "Episode 141", link: "wE7Nnl4D9lk" },
+  { title: "Episode 142", link: "pNWfy1KmPys" },
+  { title: "Episode 143", link: "Pi8ywmimWL0" },
+  { title: "Episode 144", link: "uVqismnBlN8" },
+  { title: "Episode 145", link: "nyu8CjdLA6I" },
+  { title: "Episode 146", link: "z3mQNQv4y_Y" },
+  { title: "Episode 147", link: "WorPtiPKW1g" },
+  { title: "Episode 148", link: "K_vxoM-PpCg" },
 ];
  let player, currentEpisodeIndex = 0, hideControlsTimer, isDragging = false;
 
