--- a/anime/bucket.html
+++ b/anime/bucket.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Zom 100: Bucket List of the Dead</title>
+  <title>Spy x Family english dub</title>
   <script async src="https://www.youtube.com/iframe_api"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;800&display=swap" rel="stylesheet">
@@ -103,7 +103,7 @@
   </div>
 
   <header class="text-center mt-4">
-    <h1 class="text-4xl font-extrabold">Wind Breaker - Season 1</h1>
+    <h1 class="text-4xl font-extrabold">Spy x Family english dub</h1>
   </header>
 
   <div class="video-container" onmousemove="showControls()">
@@ -128,7 +128,7 @@
 
   <div class="description-box">
     <h2 class="text-xl font-semibold mb-2">Description</h2>
-    <p>"Zom 100: Bucket List of the Dead" is an anime about Akira Tendo, a 24-year-old office worker who is tired of his soul-crushing job and lack of purpose. When a zombie outbreak occurs, Akira sees it as an opportunity to live his life to the fullest and creates a bucket list of 100 things he wants to do before becoming a zombie himself. </p>
+    <p>"the story of a spy named Twilight who must build a fake family to complete a secret mission. He adopts the alias "Loid Forger," marries an assassin named Yor, and adopts a telepathic girl named Anya—none of whom know each other's true identities. Together, they navigate hilarious and heartfelt situations while hiding their secrets. </p>
     <button class="control-btn mt-2" onclick="window.open('https://youtube.com/@museasia', '_blank')">Subscribe to Muse Asia</button>
   </div>
 
@@ -141,20 +141,45 @@
 
   <script>
     const episodes = [
-      { title: "Episode 1", link: "qRd5wbH4Cio" },
-      { title: "Episode 2", link: "_z2gQeguOA0" },
-      { title: "Episode 3", link: "0kl6UUQW_K4" },
-      { title: "Episode 4", link: "JzXyCc_Sj5Q" },
-      { title: "Episode 5", link: "IHM4aCbhUmo" },
-      { title: "Episode 6", link: "93PPhq0V0MM" },
-      { title: "Episode 7", link: "E9WUKtmRQdc" },
-      { title: "Episode 8", link: "HSQc97u8s0Q" },
-      { title: "Episode 9", link: "XTafDZ9ZhUY" },
-      { title: "Episode 10", link: "GJNugrEKk2w" },
-      { title: "Episode 11", link: "EWZrbSs6SOM" },
-      { title: "Episode 12", link: "A1vXw83JAqo" }
-  
-    ];
+  { title: "Episode 1", link: "ZgyothCzhLA" },
+  { title: "Episode 2", link: "ynOgIf7gf7w" },
+  { title: "Episode 3", link: "F8I2JtUKaTE" },
+  { title: "Episode 4", link: "Gfcg16wI27M" },
+  { title: "Episode 5", link: "gxWo0Ch_CkQ" },
+  { title: "Episode 6", link: "Z2EK164chWo" },
+  { title: "Episode 7", link: "g9gd1Xa0qyE" },
+  { title: "Episode 8", link: "Q8CxrQ8dius" },
+  { title: "Episode 9", link: "1vJLzPN3hzU" },
+  { title: "Episode 10", link: "y7sjJ4ynFPw" },
+  { title: "Episode 11", link: "1iNCi7hJj-4" },
+  { title: "Episode 12", link: "JjdZABbImZQ" },
+  { title: "Episode 13", link: "YTLnt1XPPSA" },
+  { title: "Episode 14", link: "ktq-DoF7nx4" },
+  { title: "Episode 15", link: "IlTpcnYbpSc" },
+  { title: "Episode 16", link: "8WPIdlJK26Q" },
+  { title: "Episode 17", link: "r0nKj88JksY" },
+  { title: "Episode 18", link: "IjhKRr1O4LI" },
+  { title: "Episode 19", link: "on-0Mxc5yqk" },
+  { title: "Episode 20", link: "7wpQBOW5G0w" },
+  { title: "Episode 21", link: "jib_PQ6AF7s" },
+  { title: "Episode 22", link: "1jF8jqLHXu8" },
+  { title: "Episode 23", link: "Nz2ktZtHMe4" },
+  { title: "Episode 24", link: "lbZME9FT0gc" },
+  { title: "Episode 25", link: "rRjWfeklWSI" },
+  { title: "Episode 26", link: "swm7BnAcSYI" },
+  { title: "Episode 27", link: "-R6W4N0nJgE" },
+  { title: "Episode 28", link: "V2wc1jMfwNY" },
+  { title: "Episode 29", link: "u-CiBLOx8-w" },
+  { title: "Episode 30", link: "7sEeMRRBBAY" },
+  { title: "Episode 31", link: "KdmYWk5OWKk" },
+  { title: "Episode 32", link: "FhVhlL_hhHs" },
+  { title: "Episode 33", link: "ZZKSWFi3vUo" },
+  { title: "Episode 34", link: "_yFFtBz11V8" },
+  { title: "Episode 35", link: "Lh0xWWugizw" },
+  { title: "Episode 36", link: "_BZYEZYHnF4" },
+  { title: "Episode 37", link: "ozZYQtxSVBc" },
+  { title: "Episode 38", link: "3aUWA5VWjYw" },
+];
 
     let player, currentEpisodeIndex = 0, hideControlsTimer, isDragging = false;
 
