--- a/anime/bucket.html
+++ b/anime/bucket.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Spy x Family english dub</title>
+  <title>Zom 100: Bucket List of the Dead</title>
   <script async src="https://www.youtube.com/iframe_api"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;800&display=swap" rel="stylesheet">
@@ -18,22 +18,29 @@
       --font-family: 'Poppins', sans-serif;
     }
     html, body {
-      height: 100%; margin: 0; font-family: var(--font-family);
-      background-color: var(--bg-color); color: var(--text-color);
+      height: 100%;
+      margin: 0;
+      font-family: var(--font-family);
+      background-color: var(--bg-color);
+      color: var(--text-color);
       overflow-x: hidden;
     }
     .loader-overlay {
-      position: fixed; top: 0; left: 0;
-      width: 100%; height: 100%;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       background: rgba(0,0,0,0.8);
-      display: none; /* hidden by default */
+      display: none;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       z-index: 9999;
     }
     .loader-bar-container {
-      width: 80%; max-width: 400px;
+      width: 80%;
+      max-width: 400px;
       height: 10px;
       background: rgba(255,255,255,0.2);
       border-radius: 5px;
@@ -41,56 +48,118 @@
       margin-bottom: 10px;
     }
     .loader-bar {
-      width: 0%; height: 100%;
+      width: 0%;
+      height: 100%;
       background: var(--accent-color);
       transition: width 0.1s linear;
     }
     .video-container {
-      position: relative; padding-top: 56.25%; max-width: 800px;
-      margin: 20px auto; background-color: black;
+      position: relative;
+      padding-top: 56.25%;
+      max-width: 800px;
+      margin: 20px auto;
+      background-color: black;
     }
     #videoPlayer, .overlay-layer {
-      position: absolute; top: 0; left: 0;
-      width: 100%; height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
     .controls, .progress-bar, .toggle-btn {
-      opacity: 0; transition: opacity 0.3s;
+      opacity: 0;
+      transition: opacity 0.3s;
     }
     .controls {
-      position: absolute; bottom: 10px; left: 50%;
-      transform: translateX(-50%); display: flex; gap: 6px;
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 6px;
     }
     .control-btn {
-      background-color: var(--control-bg); color: var(--text-color);
-      border: none; padding: 6px 10px; border-radius: 6px;
-      cursor: pointer; font-size: 12px;
+      background-color: var(--control-bg);
+      color: var(--text-color);
+      border: none;
+      padding: 6px 10px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 12px;
     }
-    .control-btn:hover { background-color: var(--accent-color); }
+    .control-btn:hover {
+      background-color: var(--accent-color);
+    }
     .progress-bar {
-      position: absolute; bottom: 38px; left: 10%; width: 80%; height: 12px;
-      background: rgba(255,255,255,0.3); cursor: pointer;
+      position: absolute;
+      bottom: 38px;
+      left: 10%;
+      width: 80%;
+      height: 12px;
+      background: rgba(255,255,255,0.3);
+      cursor: pointer;
     }
-    .progress { height: 100%; background: var(--accent-color); width: 0%; }
+    .progress {
+      height: 100%;
+      background: var(--accent-color);
+      width: 0%;
+    }
     .toggle-btn {
-      position: absolute; top: 10px; right: 10px;
-      background-color: var(--accent-color); color: var(--text-color);
-      padding: 6px 12px; border: none; border-radius: 6px; cursor: pointer;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background-color: var(--accent-color);
+      color: var(--text-color);
+      padding: 6px 12px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
     }
-    .episode-btn { padding: 10px; background: #2d2d3d; border-radius: 6px; text-align: center; cursor: pointer; }
-    .episode-btn.active { background: var(--accent-color); }
-    .episode-btn:hover { background: #444; }
+    .episode-btn {
+      padding: 10px;
+      background: #2d2d3d;
+      border-radius: 6px;
+      text-align: center;
+      cursor: pointer;
+    }
+    .episode-btn.active {
+      background: var(--accent-color);
+    }
+    .episode-btn:hover {
+      background: #444;
+    }
     .search-box {
-      display: block; width: 100%; max-width: 400px;
-      margin: 1rem auto; padding: 8px 12px; border-radius: 6px;
-      border: none; background-color: var(--control-bg); color: var(--text-color);
+      display: block;
+      width: 100%;
+      max-width: 400px;
+      margin: 1rem auto;
+      padding: 8px 12px;
+      border-radius: 6px;
+      border: none;
+      background-color: var(--control-bg);
+      color: var(--text-color);
     }
     .description-box {
-      max-width: 800px; margin: 20px auto;
-      background: rgba(0,0,0,0.6); padding: 15px;
-      border-radius: 8px; box-shadow: var(--box-border);
+      max-width: 800px;
+      margin: 20px auto;
+      background: rgba(0,0,0,0.6);
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: var(--box-border);
     }
-    .episode-display { text-align: center; margin-top: 8px; font-weight: bold; }
-    #episodeList { display: grid; grid-template-columns: repeat(4, 1fr); gap: 8px; max-width: 800px; margin: 20px auto; }
+    .episode-display {
+      text-align: center;
+      margin-top: 8px;
+      font-weight: bold;
+    }
+    #episodeList {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 8px;
+      max-width: 800px;
+      margin: 20px auto;
+    }
   </style>
 </head>
 <body>
@@ -103,7 +172,7 @@
   </div>
 
   <header class="text-center mt-4">
-    <h1 class="text-4xl font-extrabold">Spy x Family english dub</h1>
+    <h1 class="text-4xl font-extrabold">Wind Breaker - Season 1</h1>
   </header>
 
   <div class="video-container" onmousemove="showControls()">
@@ -124,15 +193,17 @@
     <button class="control-btn" onclick="prevEpisode()">Previous</button>
     <button class="control-btn" onclick="nextEpisode()">Next</button>
   </div>
+
   <div class="episode-display" id="episodeDisplay">Episode 1</div>
 
   <div class="description-box">
     <h2 class="text-xl font-semibold mb-2">Description</h2>
-    <p>"the story of a spy named Twilight who must build a fake family to complete a secret mission. He adopts the alias "Loid Forger," marries an assassin named Yor, and adopts a telepathic girl named Anya—none of whom know each other's true identities. Together, they navigate hilarious and heartfelt situations while hiding their secrets. </p>
+    <p>"Zom 100: Bucket List of the Dead" is an anime about Akira Tendo, a 24-year-old office worker who is tired of his soul-crushing job and lack of purpose. When a zombie outbreak occurs, Akira sees it as an opportunity to live his life to the fullest and creates a bucket list of 100 things he wants to do before becoming a zombie himself. </p>
     <button class="control-btn mt-2" onclick="window.open('https://youtube.com/@museasia', '_blank')">Subscribe to Muse Asia</button>
   </div>
 
   <input type="text" id="searchBox" class="search-box" placeholder="Search episodes..." oninput="filterEpisodes()">
+
   <div id="episodeList"></div>
 
   <footer class="mt-10 text-sm text-center text-gray-400">
@@ -141,45 +212,19 @@
 
   <script>
     const episodes = [
-  { title: "Episode 1", link: "ZgyothCzhLA" },
-  { title: "Episode 2", link: "ynOgIf7gf7w" },
-  { title: "Episode 3", link: "F8I2JtUKaTE" },
-  { title: "Episode 4", link: "Gfcg16wI27M" },
-  { title: "Episode 5", link: "gxWo0Ch_CkQ" },
-  { title: "Episode 6", link: "Z2EK164chWo" },
-  { title: "Episode 7", link: "g9gd1Xa0qyE" },
-  { title: "Episode 8", link: "Q8CxrQ8dius" },
-  { title: "Episode 9", link: "1vJLzPN3hzU" },
-  { title: "Episode 10", link: "y7sjJ4ynFPw" },
-  { title: "Episode 11", link: "1iNCi7hJj-4" },
-  { title: "Episode 12", link: "JjdZABbImZQ" },
-  { title: "Episode 13", link: "YTLnt1XPPSA" },
-  { title: "Episode 14", link: "ktq-DoF7nx4" },
-  { title: "Episode 15", link: "IlTpcnYbpSc" },
-  { title: "Episode 16", link: "8WPIdlJK26Q" },
-  { title: "Episode 17", link: "r0nKj88JksY" },
-  { title: "Episode 18", link: "IjhKRr1O4LI" },
-  { title: "Episode 19", link: "on-0Mxc5yqk" },
-  { title: "Episode 20", link: "7wpQBOW5G0w" },
-  { title: "Episode 21", link: "jib_PQ6AF7s" },
-  { title: "Episode 22", link: "1jF8jqLHXu8" },
-  { title: "Episode 23", link: "Nz2ktZtHMe4" },
-  { title: "Episode 24", link: "lbZME9FT0gc" },
-  { title: "Episode 25", link: "rRjWfeklWSI" },
-  { title: "Episode 26", link: "swm7BnAcSYI" },
-  { title: "Episode 27", link: "-R6W4N0nJgE" },
-  { title: "Episode 28", link: "V2wc1jMfwNY" },
-  { title: "Episode 29", link: "u-CiBLOx8-w" },
-  { title: "Episode 30", link: "7sEeMRRBBAY" },
-  { title: "Episode 31", link: "KdmYWk5OWKk" },
-  { title: "Episode 32", link: "FhVhlL_hhHs" },
-  { title: "Episode 33", link: "ZZKSWFi3vUo" },
-  { title: "Episode 34", link: "_yFFtBz11V8" },
-  { title: "Episode 35", link: "Lh0xWWugizw" },
-  { title: "Episode 36", link: "_BZYEZYHnF4" },
-  { title: "Episode 37", link: "ozZYQtxSVBc" },
-  { title: "Episode 38", link: "3aUWA5VWjYw" },
-];
+      { title: "Episode 1", link: "qRd5wbH4Cio" },
+      { title: "Episode 2", link: "_z2gQeguOA0" },
+      { title: "Episode 3", link: "0kl6UUQW_K4" },
+      { title: "Episode 4", link: "JzXyCc_Sj5Q" },
+      { title: "Episode 5", link: "IHM4aCbhUmo" },
+      { title: "Episode 6", link: "93PPhq0V0MM" },
+      { title: "Episode 7", link: "E9WUKtmRQdc" },
+      { title: "Episode 8", link: "HSQc97u8s0Q" },
+      { title: "Episode 9", link: "XTafDZ9ZhUY" },
+      { title: "Episode 10", link: "GJNugrEKk2w" },
+      { title: "Episode 11", link: "EWZrbSs6SOM" },
+      { title: "Episode 12", link: "A1vXw83JAqo" }
+    ];
 
     let player, currentEpisodeIndex = 0, hideControlsTimer, isDragging = false;
 
@@ -212,20 +257,16 @@
         events: {
           onReady: (e) => {
             e.target.playVideo();
-            // leave muted for autoplay, browser policy
             showLoader();
             setTimeout(() => {
               init();
               hideLoader();
             }, 5000);
-
-            // Unmute on first container click
             document.querySelector('.video-container').addEventListener('click', () => {
               player.unMute();
               player.setVolume(100);
             }, { once: true });
 
-            // Mute/unmute toggle button
             const muteBtn = document.getElementById('muteToggle');
             muteBtn.onclick = () => {
               if (player.isMuted()) {
@@ -237,7 +278,9 @@
               }
             };
           },
-          onStateChange: e => { if (e.data === YT.PlayerState.ENDED) nextEpisode(); }
+          onStateChange: e => {
+            if (e.data === YT.PlayerState.ENDED) nextEpisode();
+          }
         }
       });
     }
@@ -277,6 +320,7 @@
         updateDisplay();
       }
     }
+
     function prevEpisode() {
       if (currentEpisodeIndex > 0) {
         currentEpisodeIndex--;
@@ -298,10 +342,12 @@
     function seek(sec) {
       player.seekTo(player.getCurrentTime() + sec, true);
     }
+
     function togglePlayPause() {
       const state = player.getPlayerState();
       state === YT.PlayerState.PLAYING ? player.pauseVideo() : player.playVideo();
     }
+
     function toggleFullscreen() {
       const el = document.querySelector('.video-container');
       !document.fullscreenElement ? el.requestFullscreen() : document.exitFullscreen();
@@ -309,9 +355,20 @@
 
     const progressBar = document.getElementById('progress-bar'),
           progress = document.getElementById('progress');
-    progressBar.addEventListener('mousedown', e => { isDragging = true; updateSeek(e); });
-    document.addEventListener('mousemove', e => { if (isDragging) updateSeek(e); });
-    document.addEventListener('mouseup', () => { isDragging = false; });
+
+    progressBar.addEventListener('mousedown', e => {
+      isDragging = true;
+      updateSeek(e);
+    });
+
+    document.addEventListener('mousemove', e => {
+      if (isDragging) updateSeek(e);
+    });
+
+    document.addEventListener('mouseup', () => {
+      isDragging = false;
+    });
+
     function updateSeek(e) {
       const rect = progressBar.getBoundingClientRect();
       let x = Math.max(0, Math.min(e.clientX - rect.left, rect.width));
@@ -319,6 +376,7 @@
       progress.style.width = pct * 100 + '%';
       if (player && player.seekTo) player.seekTo(pct * player.getDuration(), true);
     }
+
     setInterval(() => {
       if (!isDragging && player && player.getCurrentTime) {
         const pct = (player.getCurrentTime() / player.getDuration()) * 100;
